MVP Early Version

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -15,9 +15,18 @@
 </head>
 
   <body>
+    <header>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
+    </header>
+
+    <section>
+
+    </section>
+
+    <footer>
+
+    </footer>
+
+
   </body>
 </html>
