--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -14,144 +14,117 @@
   <![endif]-->
 </head>
 
-<body>
-  <header>
-      <nav>
-        <ul>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Product</a></li>
-          <li><a href="#">Vision</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+<main>
+  <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Vision</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
 
-        <div class="logo">
-          <img src="img/logo.png" alt="Great Idea! Company logo.">
+          <div class="logo">
+            <img src="img/logo.png" alt="Great Idea! Company logo.">
+          </div>
+        </nav>
+
+        <div class="Main-top">
+          <img class="services-header" src="img/services-header.jpg" alt="Our services header image">
+          <h3>Services</h3>
+          <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
         </div>
-      </nav>
 
-      <div class="Main-top">
-        <img class="services-header" src="img/services-header.jpg" alt="Our services header image">
-        <h3>Services</h3>
-        <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+    </header>
 
+
+  <section class="main-content">
+
+    <div class="content-1">
+      <h3>Digital Design</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <button type="button" name="button">Learn More</button>
+    </div>
+
+
+    <div class="content-1">
+      <h3>UX / UI</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <button type="button" name="button">Learn More</button>
+    </div>
+
+
+
+
+    <div class="content-2">
+      <h3>Digital Marketing</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <button type="button" name="button">Learn More</button>
+
+    </div>
+
+
+
+
+    <div class="content-2">
+      <h3>Web Development</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <button type="button" name="button">Learn More</button>
+
+    </div>
+
+
+    <div class="content-3">
+      <h3>iOS Development</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <button type="button" name="button">Learn More</button>
+
+    </div>
+
+    <div class="content-3">
+      <h3>  Android Development</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <button type="button" name="button">Learn More</button>
+    </div>
+
+    </div>
+
+  </section>
+
+
+  <section class= "bottom-page">
+    <div class="service-info">
+      <h3>Some Facts About Our Services</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+      <ul>
+        <li>Awesome thing</li>
+        <li>Amazing thing</li>
+        <li>Cool thing</li>
+        <li>Great thing</li>
+      </ul>
+      <img class="services-info" src="img/services-info.png" alt="one of our employees hard at work">
       </div>
 
-  </header>
+
+  </section>
+
+  <footer>
+  &copy;Copyright Great Idea! 2018
+  </footer>
 
 
-<section class="">
-
-  <div class="">
-    <h3>Digital Design</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-  </div>
-
-
-  <div class="">
-    <h3>UX / UI</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-  </div>
-
-
-
-
-  <div class="">
-    <h3>Digital Marketing</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-
-  </div>
-
-
-
-
-  <div class="">
-    <h3>Digital Marketing</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis</p>
-    <button type="button" name="button">Learn More</button>
-  </div>
-
-
-
-
-
-  <div class="">
-    <h3>Web Development</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-
-  </div>
-
-
-
-
-
-
-  <div class="">
-    <h3>iOS Development</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-
-  </div>
-
-  <div class="  ">
-    <h3>iOS Development</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-
-  </div>
-
-  <div class="">
-    <h3>  Android Development</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <button type="button" name="button">Learn More</button>
-  </div>
-
-
-  <div class="">
-    <h3></h3>
-    <p></p>
-    <button type="button" name="button">Learn More</button>
-
-  </div>
-
-</section>
-
-
-<section class= "">
-  <div class="service-info">
-    <h3>Some Facts About Our Services</h3>
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-    <ul>
-      <li>Awesome thing</li>
-      <li>Amazing thing</li>
-      <li>Cool thing</li>
-      <li>Great thing</li>
-    </ul>
-    <img class="services-info" src="img/services-info.png" alt="one of our employees hard at work">
-
-
-  </div>
-</section>
-
-<footer>
-&copy;Copyright Great Idea! 2018
-</footer>
-
-
-</body>
+  </body>
+</main>
 
 </html>
