--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -32,10 +32,10 @@
           </div>
         </nav>
 
-        <div class="Main-top">
+        <div class="main-top">
           <img class="services-header" src="img/services-header.jpg" alt="Our services header image">
-          <h3>Services</h3>
-          <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+          <h3 class="top-1">Services</h3>
+          <p class="top-1">Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
         </div>
 
@@ -103,7 +103,7 @@
 
 
   <section class= "bottom-page">
-    <div class="service-info">
+    <div class="services-info">
       <h3>Some Facts About Our Services</h3>
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
@@ -112,9 +112,11 @@
         <li>Amazing thing</li>
         <li>Cool thing</li>
         <li>Great thing</li>
+    </div>
+    <div>
       </ul>
       <img class="services-info" src="img/services-info.png" alt="one of our employees hard at work">
-      </div>
+    </div>
 
 
   </section>
