--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -28,7 +28,7 @@
           </ul>
 
           <div class="logo">
-            <img src="img/logo.png" alt="Great Idea! Company logo.">
+            <a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
           </div>
         </nav>
 
